# eKYC

./: .gitignore  CMakeLists.txt  CRITICAL_FIXES_SUMMARY.md  README.md  aeron_receiver.cpp  aeron_sender.cpp  config.txt  eKYCEngine.cpp  eKYCEngine.h  helper.h  login-schema.xml  main.cpp
.github/workflows/: ekYC.yml
include/: Char64str.h  Config.h  IdentityMessage.h  Message.h  MessageFlow.h  MessageHandler.h  MessageHeader.h  Messaging.h  TimerLite.h  Types.h  WorkStealingThreadpool.h  aeron_wrapper.h  config.h  eKYCEngine.h  helper.h  message_types.h  sharded_queue.h  utils.h
include/messages/: Char64str.h  IdentityMessage.h  MessageHeader.h
output/my_app_messages/: Char64str.h  IdentityMessage.h  MessageHeader.h
src/: Message.cpp  MessageFlow.cpp  MessageHandler.cpp  MessageHandler.h  Messaging.cpp  WorkStealingThreadpool.cpp  aeron_receiver.cpp  aeron_sender.cpp  eKYCEngine.cpp  eKYCEngine.h  main.cpp  sharded_queue.cpp
